--- a/ueditor/templates/index.html
+++ b/ueditor/templates/index.html
@@ -56,7 +56,7 @@
                 </p>
 
                 <p ng-if="totalItems>0" style="text-align: center;font-size: 25px;margin: 50px 0 100px 0;">
-                    您已发表{{ totalItems }}文章
+                    您已发表&nbsp;{{ totalItems }}&nbsp;篇文章
                 </p>
 
                 <ol style="background-color: rgb(248, 248, 248);" class="col-lg-8 col-lg-offset-2">
