--- a/ueditor/templates/editor.html
+++ b/ueditor/templates/editor.html
@@ -14,6 +14,11 @@
     <script type="text/javascript" charset="utf-8" src="/static/js/ueditor/editor_config.js"></script>
     <script type="text/javascript" charset="utf-8" src="/static/js/ueditor/editor_all.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/js/ueditor/themes/default/ueditor.css"/>
+    <style type="text/css">
+        button:hover{
+            cursor: pointer;
+        }
+    </style>
     <script src="/static/js/jquery.min.js" type="text/javascript"></script>
 
     <script type="text/javascript">
@@ -60,6 +65,7 @@
 </head>
 <body style="font-size: 13px; color: #444; font-family: 微软雅黑; background: #eee; cursor:default; line-height:24px">
 <header>
+    <a style="color:#ffffff;font-size:16px; line-height:76px; margin-left:12px;" href="/">返回文章页</a>
 </header>
 <section class="container">
     <div class="content_main">
@@ -1227,7 +1233,7 @@
                             <div class="element-item" data-color="">
                                 <div class="content">
                                     <p>
-                                        <img src="http://mmbiz.qlogo.cn/mmbiz/6xsuhALdNEr0ibLDATPbiaQoI0OyJzZP81QZ0fLtucmo392CBHBJy16HzMfysTVYzuicWu8lFoian4odJO4ofGmgMw/0"
+                                        <img src=""
                                              width="100%"/></p>
                                 </div>
                             </div>
@@ -1918,7 +1924,7 @@
                                     {% csrf_token %}
                                     <textarea id="editor" name="editor"
                                               style="width:600px;height:500px;">{{ article.content }}</textarea>
-                                    <input id="saveSubmit" type="button" value="保存发布"/>
+                                    <button id="saveSubmit" style=" width: 60px; height: 40px; float: right; margin-right: 40px; background-color: #42f9ff;">保存发布</button>
                                 </form>
                             </div>
                         </div>
