--- a/ueditor/templates/index.html
+++ b/ueditor/templates/index.html
@@ -17,14 +17,38 @@
     <script src="{% static "js/mainView.js" %}"></script>
         <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <link href="{% static "css/mainView.css" %}" rel="stylesheet">
-    <title>专利结果展示</title>
+    <title>文章列表</title>
     <style>
 
     </style>
 </head>
 <body>
-
 {% verbatim %}
+<nav class="navbar navbar-default navbar-static-top " role="navigation">
+    <div class="container">
+        <ul class="nav nav-pills">
+            <li role="presentation" style="float: right;"><a href="/unAuth" id="logout_btn" data-toggle="modal" data-target="#logoutModal">退出登陆</a></li>
+        </ul>
+
+    </div>
+</nav>
+<div class="modal fade" id="logoutModal" tabindex="-2" role="dialog" aria-labelledby="logoutModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel"><a href="/unAuth">退出登陆</a></h4>
+            </div>
+            <div class="modal-body">
+                <p>您确定要退出登陆</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="save_logout_btn" class="btn btn-primary">确定</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div ng-controller="AccordionDemoCtrl">
 
